Close reply keyboard by touch on mobiles Fix reply keyboard max width on mobiles

--- a/src/scss/partials/_replyKeyboard.scss
+++ b/src/scss/partials/_replyKeyboard.scss
@@ -4,6 +4,7 @@
 	right: 0;
 	bottom: calc(100% + .625rem);
 	width: 26.25rem !important;
+  max-width: 100%;
 	//height: 26.25rem;
 	max-height: 26.25rem;
 	box-shadow: 0px 5px 10px 5px rgba(16, 35, 47, .14);
